# ela-fw-pico

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: analyzer.cpp  analyzer.hpp  comms.cpp  comms.hpp  debug_print_uart.hpp  ela.h  ela_configuration.h  hardware.cpp  hardware.hpp  hw_helper_func.hpp  main.cpp  pins_input.pio  usb_stream.hpp
